# epsteinlib

./: .gitignore  .tarpaulin.toml  CMakeLists.txt  Cargo.toml  Justfile  README.md  flake.nix
src/: CMakeLists.txt  crandall.c  crandall.rs  gamma.c  gamma.rs  lib.rs  tools.c  tools.rs  zeta.c  zeta.rs
src/tests/: CMakeLists.txt  utils.c
src/tests/csv/: assignzArgBound.csv  crandall_g_Ref.csv  egf_cf.csv  egf_gammaStar.csv  egf_pt.csv  egf_qt.csv  egf_rek.csv  egf_ua.csv  egf_ua_r.csv  egf_ugamma.csv
src/tests/jsonl/: sum_fourier.jsonl  sum_real.jsonl  sum_real.jsonl.license
tests/: lattice_sum.rs
