# SPDX-FileCopyrightText: 2025 Eric Berquist <eric.berquist@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "epsteinlib"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = "0.2.11"
ndarray = "0.16.1"
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", branch = "master", features = [
  "netlib",
] }
num-complex = "0.4.6"
num-traits = "0.2.19"
special = "0.11.3"
transpose = "0.2.3"

[dev-dependencies]
approx = "0.5.1"
csv = "1.3.1"
manifest-dir-macros = "0.1.18"
serde = { version = "1.0.219", features = ["derive"] }
serde-jsonlines = "0.7.0"
